# TheBookGame

./: .gitignore  Index.html  pyproject.toml
backend/: database.py  gamePage.py  main.py  model.py
