[tool.poetry]
name = "farm"
version = "0.1.0"
description = ""
authors = ["Rain Gray <blek42dgek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
react = "^4.3.0"
uvicorn = "^0.19.0"
motor = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
